# aws-sdk-tcl

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  example.tcl  pkgIndex.tcl  readme.md  ttrek.json
examples/: dynamodb.tcl  iam.tcl  index.js  lambda.tcl  real_s3.tcl  s3.tcl  sqs.tcl  ssm.tcl
src/aws-sdk-tcl-dynamodb/: CMakeLists.txt  Makefile  library.cc  library.h  pkgIndex.tcl  pkgIndex.tcl.in  readme.md
src/aws-sdk-tcl-dynamodb/examples/: create-table.tcl  delete-item.tcl  delete-table.tcl  global-secondary-index.tcl  list-tables.tcl  put-and-get-item.tcl  query.tcl  readme.md
src/aws-sdk-tcl-iam/: CMakeLists.txt  Makefile  library.cc  library.h  pkgIndex.tcl  pkgIndex.tcl.in  readme.md
src/aws-sdk-tcl-kms/: CMakeLists.txt  Makefile  library.cc  library.h  pkgIndex.tcl.in  readme.md
src/aws-sdk-tcl-kms/examples/: kms-encrypt-big.tcl  kms-encrypt-small.tcl  kms-manage-keys.tcl  kms-misc.tcl  readme.md
src/aws-sdk-tcl-lambda/: CMakeLists.txt  Makefile  library.cc  library.h  pkgIndex.tcl  pkgIndex.tcl.in  readme.md
src/aws-sdk-tcl-s3/: CMakeLists.txt  Makefile  library.cc  library.h  pkgIndex.tcl  pkgIndex.tcl.in  readme.md
src/aws-sdk-tcl-s3/examples/: readme.md  s3-authv4signer.tcl  s3-batch-delete-files.tcl  s3-create-delete-bucket.tcl  s3-delete-file.tcl  s3-download-file.tcl  s3-list-buckets.tcl  s3-upload-file.tcl  s3-upload-text-object.tcl
src/aws-sdk-tcl-sqs/: CMakeLists.txt  Makefile  library.cc  library.h  pkgIndex.tcl  pkgIndex.tcl.in  readme.md
src/aws-sdk-tcl-ssm/: CMakeLists.txt  Makefile  library.cc  library.h  pkgIndex.tcl.in  readme.md
src/common/: common.cc  common.h
